--- a/dl.html
+++ b/dl.html
@@ -37,23 +37,23 @@
 
     <ul>
 
-        <li><img src="assets/images/dl/1.jpg" alt="" width="85%" height="800" ></li>
-        <li><img src="assets/images/dl/2.jpg" alt="" width="85%" height="800" ></li>
-        <li><img src="assets/images/dl/3.jpg" alt="" width="85%" height="800" ></li>
-        <li><img src="assets/images/dl/4.jpg" alt="" width="85%" height="800" ></li>
-        <li><img src="assets/images/dl/5.jpg" alt="" width="85%" height="800" ></li>
-        <li><img src="assets/images/dl/6.jpg" alt="" width="85%" height="800" ></li>
-        <li><img src="assets/images/dl/7.jpg" alt="" width="85%" height="800" ></li>
-        <li><img src="assets/images/dl/8.jpg" alt="" width="85%" height="800" ></li>
-        <li><img src="assets/images/dl/9.jpg" alt="" width="85%" height="800" ></li>
-        <li><img src="assets/images/dl/10.jpg" alt="" width="85%" height="800" ></li>
-        <li><img src="assets/images/dl/11.jpg" alt="" width="85%" height="800" ></li>
-        <li><img src="assets/images/dl/12.jpg" alt="" width="85%" height="800" ></li>
-        <li><img src="assets/images/dl/13.jpg" alt="" width="85%" height="800" ></li>
-        <li><img src="assets/images/dl/14.jpg" alt="" width="85%" height="800" ></li>
-        <li><img src="assets/images/dl/15.jpg" alt="" width="85%" height="800" ></li>
-        <li><img src="assets/images/dl/16.jpg" alt="" width="85%" height="800" ></li>
-        <li><img src="assets/images/dl/17.jpg" alt="" width="85%" height="800" ></li>
+        <li><img src="assets/images/dl/1.png" alt="" width="85%" height="800" ></li>
+        <li><img src="assets/images/dl/2.png" alt="" width="85%" height="800" ></li>
+        <li><img src="assets/images/dl/3.png" alt="" width="85%" height="800" ></li>
+        <li><img src="assets/images/dl/4.png" alt="" width="85%" height="800" ></li>
+        <li><img src="assets/images/dl/5.png" alt="" width="85%" height="800" ></li>
+        <li><img src="assets/images/dl/6.png" alt="" width="85%" height="800" ></li>
+        <li><img src="assets/images/dl/7.png" alt="" width="85%" height="800" ></li>
+        <li><img src="assets/images/dl/8.png" alt="" width="85%" height="800" ></li>
+        <li><img src="assets/images/dl/9.png" alt="" width="85%" height="800" ></li>
+        <li><img src="assets/images/dl/10.png" alt="" width="85%" height="800" ></li>
+        <li><img src="assets/images/dl/11.png" alt="" width="85%" height="800" ></li>
+        <li><img src="assets/images/dl/12.png" alt="" width="85%" height="800" ></li>
+        <li><img src="assets/images/dl/13.png" alt="" width="85%" height="800" ></li>
+        <li><img src="assets/images/dl/14.png" alt="" width="85%" height="800" ></li>
+        <li><img src="assets/images/dl/15.png" alt="" width="85%" height="800" ></li>
+        <li><img src="assets/images/dl/16.png" alt="" width="85%" height="800" ></li>
+        <li><img src="assets/images/dl/17.png" alt="" width="85%" height="800" ></li>
 
     </ul>
 
